--- a/index.html
+++ b/index.html
@@ -292,6 +292,34 @@
         book: "Mazide Kalan" 
       },
       { 
+        text: "Sarsılmadan duranlar... gürültüsüz çökenlerdir. Ve ben artık o sessiz çöküşün, bir tür yeniden doğuş olduğunu biliyorum. Bazı insanlar fırtınada savrulmaz... çünkü fırtınayı çoktan içlerine almışlardır.", 
+        book: "Beynin Sessiz Fırtınaları" 
+      },
+      { 
+        text: "İnsan bazı şeyleri söylemese de gözleri konuşur... Göz göze gelmek cesarettir; gözünü kaçırmamaksa, vedadır.", 
+        book: "Beynin Sessiz Fırtınaları" 
+      },
+      { 
+        text: "Bazı insanlar konuşmaz. Ama gözleriyle bir ömürlük cümle kurarlar... Birini gözünden tanımak... Bir yabancı gibi değil, bir zamanlar birlikte susmuş iki kişi gibi bakmaktır.", 
+        book: "Beynin Sessiz Fırtınaları" 
+      },
+      { 
+        text: "...seninle konuşmaya başladığım her an, sustuğum bir geçmişe saplandım. Ben seninle ilk kez konuşurken; çocukluğumu, inandığım her şeyi, bütün o masumiyeti... hepsini yeniden kaybettim.", 
+        book: "Geçmişteki Sessizlik" 
+      },
+      { 
+        text: "Bazı özlemler... geçmişten değil, hiç yaşanmamış ihtimallerden doğar. Bir bakış, bir cümle, belki de yalnızca 'merhaba' diyemediğin bir anda başlar o özlem. Gerçekte olmamıştır ama senin içinde defalarca yaşanmıştır. Ve işte bu, onu daha gerçek kılar.", 
+        book: "Beynin Sessiz Fırtınaları" 
+      },
+      { 
+        text: "İnsan bazen görünmek istemez. Ama fark edilmek ister... Ben, fark edilmekle görünmemek arasında asılı kalmış bir kelimeydim. Ne tam yazılmış, ne de silinmiş.", 
+        book: "Beynin Sessiz Fırtınaları" 
+      },
+      { 
+        text: "İnsan bazen geçmişini anlatırken... olanı değil, olmasını istediğini hatırlar. Ve bu, bir yalan değil. Bu, hayatta kalma biçimidir. Çünkü bazı anılar eksikse, onları tamamlayan şey: hayaldir.", 
+        book: "Beynin Sessiz Fırtınaları" 
+      },
+      { 
         text: "İnsan, hayal ettiğini severmiş; gerçeği ise sadece tolere edermiş.", 
         book: "Kayıp Duyular Atlası" 
       },
