--- a/index.html
+++ b/index.html
@@ -268,16 +268,12 @@
       }, { duration: 500, fill: "forwards" });
     });
     
-    // === KADERİN CÜMLESİ MEKANİZMASI (AKILLI SEÇİM) ===
+  // === KADERİN CÜMLESİ MEKANİZMASI (AKILLI SEÇİM) ===
     
     const quotes = [
       { 
         text: "Sana hiç dokunmadan, seni hiç durdurmadan... sadece uzaktan bir şarkı gibi sevdim seni.", 
         book: "Turuncu Saçlı Kız" 
-      },
-      { 
-        text: "Sen bana dünyada başka bir hayatın da mevcut olduğunu... öğrettin.", 
-        book: "Kürk Mantolu Madonna" 
       },
       { 
         text: "Burada ses yok. Ama gürültü çok.", 
@@ -292,7 +288,7 @@
         book: "Mazide Kalan" 
       },
       { 
-        text: "Sarsılmadan duranlar... gürültüsüz çökenlerdir. Ve ben artık o sessiz çöküşün, bir tür yeniden doğuş olduğunu biliyorum. Bazı insanlar fırtınada savrulmaz... çünkü fırtınayı çoktan içlerine almışlardır.", 
+        text: "Sarsılmadan duranlar... gürültüsüz çökenlerdir.", 
         book: "Beynin Sessiz Fırtınaları" 
       },
       { 
@@ -300,23 +296,19 @@
         book: "Beynin Sessiz Fırtınaları" 
       },
       { 
-        text: "Bazı insanlar konuşmaz. Ama gözleriyle bir ömürlük cümle kurarlar... Birini gözünden tanımak... Bir yabancı gibi değil, bir zamanlar birlikte susmuş iki kişi gibi bakmaktır.", 
+        text: "Bazı insanlar konuşmaz. Ama gözleriyle bir ömürlük cümle kurarlar.", 
         book: "Beynin Sessiz Fırtınaları" 
       },
       { 
-        text: "...seninle konuşmaya başladığım her an, sustuğum bir geçmişe saplandım. Ben seninle ilk kez konuşurken; çocukluğumu, inandığım her şeyi, bütün o masumiyeti... hepsini yeniden kaybettim.", 
-        book: "Geçmişteki Sessizlik" 
-      },
-      { 
-        text: "Bazı özlemler... geçmişten değil, hiç yaşanmamış ihtimallerden doğar. Bir bakış, bir cümle, belki de yalnızca 'merhaba' diyemediğin bir anda başlar o özlem. Gerçekte olmamıştır ama senin içinde defalarca yaşanmıştır. Ve işte bu, onu daha gerçek kılar.", 
+        text: "Bazı özlemler... geçmişten değil, hiç yaşanmamış ihtimallerden doğar.", 
         book: "Beynin Sessiz Fırtınaları" 
       },
       { 
-        text: "İnsan bazen görünmek istemez. Ama fark edilmek ister... Ben, fark edilmekle görünmemek arasında asılı kalmış bir kelimeydim. Ne tam yazılmış, ne de silinmiş.", 
+        text: "İnsan bazen görünmek istemez. Ama fark edilmek ister... Ben, fark edilmekle görünmemek arasında asılı kalmış bir kelimeydim.", 
         book: "Beynin Sessiz Fırtınaları" 
       },
       { 
-        text: "İnsan bazen geçmişini anlatırken... olanı değil, olmasını istediğini hatırlar. Ve bu, bir yalan değil. Bu, hayatta kalma biçimidir. Çünkü bazı anılar eksikse, onları tamamlayan şey: hayaldir.", 
+        text: "İnsan bazen geçmişini anlatırken... olanı değil, olmasını istediğini hatırlar.", 
         book: "Beynin Sessiz Fırtınaları" 
       },
       { 
@@ -336,10 +328,6 @@
         book: "Turuncu Saçlı Kız" 
       },
       { 
-        text: "Güzelliğin sadece dışına değil, içindeki dağınıklığa da aitti.", 
-        book: "Turuncu Saçlı Kız" 
-      },
-      { 
         text: "Kitap biter. Ama ses… devam eder.", 
         book: "Kaybolan Sesin Defteri" 
       },
@@ -348,18 +336,10 @@
         book: "Kaybolan Sesin Defteri" 
       },
       { 
-        text: "Biliyor musun, ben seni hiç ‘sahiplenmedim’. Çünkü sahip olduklarımı hep kaybettim. O yüzden sana hiç ‘benimsin’ diyemedim. Sadece içimden, ‘sensin’ dedim.", 
+        text: "Biliyor musun, ben seni hiç ‘sahiplenmedim’. Çünkü sahip olduklarımı hep kaybettim.", 
         book: "Geçmişteki Sessizlik" 
       },
-       { 
-        text: "Elimde kahve vardı. Ama ilk kez... kahvenin tadını merak etmedim. Sadece o buharı izledim. Yavaşça yükseliyor, ve kayboluyordu. Tıpkı bazı cümleler gibi. Söyleniyor... ama karşıya varmadan yok oluyordu.", 
-        book: "Beynin Sessiz Fırtınaları" 
-      },
-       { 
-        text: "Belki başka bir zaman, başka bir şehirde, bir parkta otururken tanımadan göz göze geleceğiz. Belki sen beni tanımayacaksın. Ama ben... seni her zaman tanıyacağım... Çünkü o günden sonra ne zaman gökyüzü turuncuya dönse... seni hatırladım.", 
-        book: "Turuncu Saçlı Kız" 
-      },
-       { 
+      { 
         text: "Bazı insanlar, hayata bir cümle gibi girer. Sonra virgül olur. Sonra üç nokta... Ve sonra, sessizlik.", 
         book: "Turuncu Saçlı Kız" 
       },
