--- a/index.html
+++ b/index.html
@@ -498,6 +498,15 @@
         }, 500);
       }, 2800); // 2.8 saniye sonra kapanır
     });
+    // === GİZLİ KONSOL MESAJI ===
+    console.log(
+      "%c Buralarda ne arıyorsun?",
+      "color: #d4a373; font-family: serif; font-size: 20px; font-weight: bold;"
+    );
+    console.log(
+      "%c Kodların arasında hikaye aranmaz.\nHikaye, satır aralarındaki boşluktadır.",
+      "color: #bcb6aa; font-family: sans-serif; font-size: 14px; font-style: italic;"
+    );
   </script>
 
 </body>
