--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
         book: "Turuncu Saçlı Kız" 
       },
       { 
-        text: "Burada ses yok. Ama gürültü çok.", 
-        book: "Beynin Sessiz Fırtınaları" 
+        text: "Eğer bir gün yine yalnız yazarsam... seni değil, seni bekleyen hâlimi özlerim.", 
+        book: "Geçmişteki Sessizlik" 
       },
       { 
-        text: "Herkes duymak istediğini duyar, ama kimse sessizliği duymaz.", 
-        book: "Beynin Sessiz Fırtınaları" 
+        text: "Bazı insanlar hayatımıza dokunmaz... sadece gözlerimizin içine bakıp kim olduğumuzu hatırlatırlar.", 
+        book: "Geçmişteki Sessizlik" 
       },
       { 
         text: "Geriye dönsem de seni değil, sadece kendi yokluğumu bulacağımı biliyorum.", 
