--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Berkay Alay — Yazar</title>
   <meta name="description" content="Berkay Alay. Sessizliğin etrafında yazılmış metinler." />
+  <meta name="google-site-verification" content="_fpKI216drtk2Kzfbf6_jRQ_qz5sZr8cDLDdBzQObvE" />
   
   <link href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
   <link rel="icon" href="./profile.jpg" type="image/jpeg">
