--- a/index.html
+++ b/index.html
@@ -200,13 +200,17 @@
       </div>
     </section>
 
-    <section class="section section--footer">
+  <section class="section section--footer">
       <div class="wrap footer">
-        <p class="sig__meta">
-          Tüm platformlardaki sürümler için
-          <a href="https://books2read.com/berkayalay" target="_blank" rel="noopener">
-            yazar sayfası
+        
+        <div style="margin-bottom: 25px;">
+          <a href="./kutuphane.html" class="btn-ghost" style="font-size: 0.85rem; letter-spacing: 1px; padding: 10px 25px; opacity: 0.8;">
+            Tüm Külliyatı İncele
           </a>
+        </div>
+
+        <p class="sig__meta">
+          © 2026 Berkay Alay — <span style="opacity: 0.5;">Kelimelerin Sığınağı.</span>
         </p>
       </div>
     </section>
