Update album cover image in kutuphane.html

--- a/kutuphane.html
+++ b/kutuphane.html
@@ -302,7 +302,7 @@
   <div class="music-control" id="music-trigger">
     <div class="disc-wrapper">
       <div class="disc" id="disc">
-        <img src="./profile.jpg" alt="Plak">
+        <img src="./kralkaybederse.jpg" alt="Plak">
       </div>
     </div>
     <span class="music-hint">Melodiyi dinle...</span>
