Update comment to improve clarity in kutuphane.html

--- a/kutuphane.html
+++ b/kutuphane.html
@@ -340,7 +340,7 @@
     const disc = document.getElementById('musicDisc');
     const content = document.getElementById('main-content');
 
-    // BAŞLANGIÇTA KAYDIRMAYI KİLİTLE
+    // Sayfa açıldığında kaydırmayı kilitle
     document.body.style.overflow = 'hidden';
 
     // === GİRİŞ BUTONUNA TIKLANINCA ===
