--- a/index.html
+++ b/index.html
@@ -294,10 +294,15 @@
       // Perde Kapansın
       intro.classList.add('hide');
 
-      setTimeout(() => {
+    setTimeout(() => {
         intro.remove();
-        document.body.style.overflow = ''; // Kaydırmayı aç
-        document.documentElement.style.overflow = '';
+        
+        // --- KİLİDİ AÇAN KODLAR (TAM BURAYA EKLE) ---
+        document.body.style.overflow = 'auto'; 
+        document.documentElement.style.overflow = 'auto';
+        document.body.style.height = 'auto';
+        document.documentElement.style.height = 'auto';
+        // ------------------------------------------
       }, 900);
     });
 // ... (Üstteki kodlar aynen kalacak) ...
