Enhance index.html with meta tags and preload links
Added meta tags for theme color and app status bar style, and preloaded CSS and image resources.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="tr">
 <head>
+  <meta name="theme-color" content="#0f1113">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+<link rel="preload" href="./style.css" as="style">
+<link rel="preload" href="./profile.jpg" as="image">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Berkay Alay — Yazar</title>
