--- a/index.html
+++ b/index.html
@@ -127,7 +127,12 @@
             Çünkü bazı duygular açıklanmaz — ancak hissedildiğinde anlaşılır.
           </p>
           
-          <div class="signature">Berkay Alay</div>
+          <div class="signature-wrapper" id="sig-trigger">
+  <svg class="signature-svg" id="sig-svg" viewBox="0 0 400 120">
+    <path d="M40,80 Q100,20 160,80 T280,80 Q320,40 360,60" />
+    <text x="40" y="90" font-family="'Mrs Saint Delafield', cursive" font-size="45" fill="var(--accent)" stroke="none">Berkay Alay</text>
+  </svg>
+</div>
           
         </blockquote>
       </div>
@@ -251,6 +256,44 @@
   </audio>
 
   <script>
+    // 1. GECE MESİSİ SENSÖRÜ (Scriptin en başına ekle)
+    const currentHour = new Date().getHours();
+    if (currentHour >= 22 || currentHour < 6) {
+      document.body.classList.add('night-mode');
+    }
+
+    // 2. KÜL PARÇACIKLARI (burnBtn.addEventListener içine, burning class'ından hemen önceye ekle)
+    function createAshes() {
+      for (let i = 0; i < 20; i++) {
+        const ash = document.createElement('div');
+        ash.className = 'ash-particle';
+        ash.style.left = (Math.random() * 80 + 10) + '%';
+        ash.style.top = (Math.random() * 50 + 40) + '%';
+        ash.style.animationDelay = (Math.random() * 0.5) + 's';
+        document.querySelector('.secret-content').appendChild(ash);
+        setTimeout(() => ash.remove(), 2500);
+      }
+    }
+
+    // burnBtn tıklama olayına ekle
+    burnBtn.addEventListener('click', () => {
+      if(secretText.value.trim() === "") return;
+      createAshes(); // Külleri savur
+      secretContent.classList.add('burning');
+      // ... (diğer mevcut kodların)
+    });
+
+    // 3. SCROLL TETİKLİ İMZA (Scriptin en sonuna ekle)
+    const sigObserver = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          document.getElementById('sig-svg').classList.add('draw');
+          document.getElementById('sig-trigger').classList.add('visible');
+        }
+      });
+    }, { threshold: 0.8 }); // İmza %80 göründüğünde başla
+
+    sigObserver.observe(document.getElementById('sig-trigger'));
     // === 1. SAYFA YÜKLENİNCE FADE-IN EFEKTİ ===
     window.addEventListener('load', () => {
       document.body.classList.add('loaded');
