--- a/index.html
+++ b/index.html
@@ -256,21 +256,23 @@
   </audio>
 
   <script>
- <script>
   // 1. GECE MESİSİ SENSÖRÜ
   const currentHour = new Date().getHours();
   if (currentHour >= 22 || currentHour < 6) {
     document.body.classList.add('night-mode');
   }
 
-  // === SAYFA ELEMENTLERİ VE DEĞİŞKENLER ===
+  // === SAYFA YÜKLENME YÖNETİMİ ===
+  window.addEventListener('load', () => {
+    document.body.classList.add('loaded');
+  });
+
+  // === DEĞİŞKENLER VE ELEMENTLER ===
   const intro = document.getElementById('introScreen');
   const btn = document.getElementById('introBtn');
   const music = document.getElementById('bgMusic');
   const disc = document.getElementById('musicDisc');
   const spotlight = document.querySelector('.spotlight');
-  const cursorDot = document.querySelector('[data-cursor-dot]');
-  const cursorOutline = document.querySelector('[data-cursor-outline]');
   
   const secretTrigger = document.getElementById('secret-trigger');
   const secretModal = document.getElementById('secret-modal');
@@ -290,23 +292,27 @@
     setTimeout(() => {
       intro.remove();
       document.body.style.overflow = 'auto'; 
+      document.documentElement.style.overflow = 'auto';
     }, 900);
   });
 
-  function toggleMusic() {
+  disc.addEventListener('click', () => {
     if (music.paused) { music.play(); disc.classList.add('playing'); } 
     else { music.pause(); disc.classList.remove('playing'); }
-  }
-  disc.addEventListener('click', toggleMusic);
+  });
 
   // === GÖRSEL EFEKTLER (Fener ve İmleç) ===
   document.addEventListener('mousemove', (e) => {
     spotlight.style.setProperty('--x', e.clientX + 'px');
     spotlight.style.setProperty('--y', e.clientY + 'px');
     
-    cursorDot.style.left = `${e.clientX}px`;
-    cursorDot.style.top = `${e.clientY}px`;
-    cursorOutline.animate({ left: `${e.clientX}px`, top: `${e.clientY}px` }, { duration: 500, fill: "forwards" });
+    const cursorDot = document.querySelector('[data-cursor-dot]');
+    const cursorOutline = document.querySelector('[data-cursor-outline]');
+    if(cursorDot && cursorOutline) {
+        cursorDot.style.left = `${e.clientX}px`;
+        cursorDot.style.top = `${e.clientY}px`;
+        cursorOutline.animate({ left: `${e.clientX}px`, top: `${e.clientY}px` }, { duration: 500, fill: "forwards" });
+    }
   });
 
   // === KÜL PARÇACIKLARI FONKSİYONU ===
@@ -345,17 +351,24 @@
     }, 2800);
   });
 
-  // === SCROLL TETİKLİ İMZA (Şimdi Özgür!) ===
+  // === SCROLL TETİKLİ İMZA (Hata Buradaydı, Artık Özgür) ===
   const sigObserver = new IntersectionObserver((entries) => {
     entries.forEach(entry => {
       if (entry.isIntersecting) {
-        document.getElementById('sig-svg').classList.add('draw');
-        document.getElementById('sig-trigger').classList.add('visible');
+        const sigSvg = document.getElementById('sig-svg');
+        const sigTrigger = document.getElementById('sig-trigger');
+        if(sigSvg) sigSvg.classList.add('draw');
+        if(sigTrigger) sigTrigger.classList.add('visible');
       }
     });
   }, { threshold: 0.8 });
 
-  sigObserver.observe(document.getElementById('sig-trigger'));
+  const target = document.getElementById('sig-trigger');
+  if (target) sigObserver.observe(target);
+
+  // === SEKME BAŞLIĞI ===
+  window.addEventListener("blur", () => { document.title = "Sessizlik..."; });
+  window.addEventListener("focus", () => { document.title = "Berkay Alay — Yazar"; });
 
   // === KADERİN CÜMLESİ (Mevcut kodların buraya eklenebilir) ===
  // === KADERİN CÜMLESİ MEKANİZMASI (AKILLI SEÇİM) ===
