--- a/index.html
+++ b/index.html
@@ -134,22 +134,26 @@
     </filter>
   </defs>
 
-  <g stroke="#2e40a6" stroke-width="2.2" fill="none" stroke-linecap="round" stroke-linejoin="round" filter="url(#ink-blur)">
+ <svg width="450" height="200" viewBox="0 0 450 200" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+    <filter id="ink-blur" x="-20%" y="-20%" width="140%" height="140%">
+      <feGaussianBlur in="SourceGraphic" stdDeviation="0.7" />
+    </filter>
+  </defs>
+
+  <g stroke="#2e40a6" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round" filter="url(#ink-blur)">
     
-    <path d="M 110 80 L 110 150 
-             M 110 150 
-             C 80 160, 70 110, 110 100
-             C 140 90, 150 120, 120 130
-             C 110 135, 140 135, 150 140" />
+    <path d="M 130 70 L 130 140 
+             Q 135 155, 145 145 
+             Q 155 135, 165 145
+             Q 175 155, 185 145
+             Q 195 135, 205 145
+             Q 215 155, 225 150" />
 
-    <path d="M 150 140 
-             q 12 -5 24 0 
-             q 12 -5 24 0 
-             q 12 -5 24 0" />
-
-    <path d="M 80 110 
-             C 150 90, 300 60, 420 50" 
-             opacity="0.9" />
+    <path d="M 90 150 
+             C 60 130, 60 90, 110 80 
+             C 160 70, 300 50, 420 30" 
+             stroke-width="2.2" />
   </g>
 </svg>
           
