--- a/index.html
+++ b/index.html
@@ -472,15 +472,9 @@
     ];
     // ... const quotes = [...] bittikten sonra ...
  // === KADERİN CÜMLESİ MEKANİZMASI (ÇALIŞTIRICI) ===
-    const fateBtn = document.getElementById('fate-btn');
-    const fateResult = document.getElementById('fate-result');
-    const quoteText = document.getElementById('quote-text');
-    const bookName = document.getElementById('book-name');
-    const shareX = document.getElementById('share-x');
-    const shareWa = document.getElementById('share-wa');
-    const shareCopy = document.getElementById('share-copy');
-    const copyMsg = document.getElementById('copy-msg');
-
+   // === KADERİN CÜMLESİ MEKANİZMASI (ÇALIŞTIRICI) ===
+    // Burada 'const' kelimelerini kaldırdık çünkü yukarıda zaten tanımlandılar.
+    
     let availableIndices = []; // Tekrarsız seçim için havuz
 
     fateBtn.addEventListener('click', () => {
