--- a/index.html
+++ b/index.html
@@ -221,13 +221,12 @@
       </div>
     </section>
 
-  <section class="section section--footer">
+<section class="section section--footer">
       <div class="wrap footer">
         
-        <div style="margin-bottom: 25px;">
-          <a href="./kutuphane.html" class="btn-ghost" style="font-size: 0.85rem; letter-spacing: 1px; padding: 10px 25px; opacity: 0.8;">
-            Tüm Külliyatı İncele
-          </a>
+        <div class="nav-row">
+          <a href="./kutuphane.html" class="btn-ghost">Tüm Külliyat</a>
+          <a href="./karakterler.html" class="btn-ghost">Sessizliğin Yüzleri</a>
         </div>
 
         <p class="sig__meta">
