--- a/karakterler.html
+++ b/karakterler.html
@@ -277,7 +277,7 @@
       <a href="https://berkayalay53.github.io/beyninsessizfirtinalari.github.io/" class="card-link" target="_blank">
         <div class="portrait-card wide"> <img src="./otopotre7.jpg" alt="Üçlü İttifak" class="portrait-img">
           <div class="portrait-info">
-            <h2 class="char-name">Diehl, Morgan & Landa</h2>
+            <h2 class="char-name">Harris, Landa & Diehl</h2>
             <span class="book-ref">Beynin Sessiz Fırtınaları</span>
           </div>
         </div>
